--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-python-telegram-bot==13.15
-telethon==1.39.0
-MetaTrader5==5.0.37
-openai==0.28
+python-telegram-bot==20.6
+Pillow
 python-dotenv
+arabic_reshaper
+python-bidi
